--- a/src/componentes/S5_Asi_trabajamos/Asi_trabajamos.css
+++ b/src/componentes/S5_Asi_trabajamos/Asi_trabajamos.css
@@ -1,14 +1,7 @@
 .asi-trabajamos {
     position: relative;
 }
-.marco-ref {
-    /* position: absolute; */
-    position: fixed;
-    width: 100%;
-    height: 20%;
-    border: 5px solid red;
-    z-index: 9999;
-}
+
 .asi-trabajamos__contenedor {
     width: 1300px;
     height: 1550px;
@@ -355,71 +348,21 @@
     display: block;
 }
 
-.proceso__elemento-1__texto__titulo {
-    font-size: 22.3px;
-    color: #307ba3;
-}
-
-.proceso__elemento-2__texto__titulo {
-    font-size: 22.3px;
-    color: #307ba3;
-}
-
-.proceso__elemento-3__texto__titulo {
-    font-size: 22.3px;
-    color: #307ba3;
-}
-
-.proceso__elemento-4__texto__titulo {
-    font-size: 22.3px;
-    color: #307ba3;
-}
-
-.proceso__elemento-5__texto__titulo {
-    font-size: 22.3px;
-    color: #307ba3;
-}
-
+.proceso__elemento-1__texto__titulo,
+.proceso__elemento-2__texto__titulo,
+.proceso__elemento-3__texto__titulo,
+.proceso__elemento-4__texto__titulo,
+.proceso__elemento-5__texto__titulo,
 .proceso__elemento-6__texto__titulo {
     font-size: 22.3px;
     color: #307ba3;
 }
 
-.proceso__elemento-1__texto__item {
-    line-height: 0.5;
-    color: #307ba3;
-    font-weight: 700;
-}
-
-
-.proceso__elemento-2__texto__item {
-    line-height: 0.5;
-    color: #307ba3;
-    font-weight: 700;
-}
-
-
-.proceso__elemento-3__texto__item {
-    line-height: 0.5;
-    color: #307ba3;
-    font-weight: 700;
-}
-
-
-.proceso__elemento-4__texto__item {
-    line-height: 0.5;
-    color: #307ba3;
-    font-weight: 700;
-}
-
-
-.proceso__elemento-5__texto__item {
-    line-height: 0.5;
-    color: #307ba3;
-    font-weight: 700;
-}
-
-
+.proceso__elemento-1__texto__item,
+.proceso__elemento-2__texto__item,
+.proceso__elemento-3__texto__item,
+.proceso__elemento-4__texto__item,
+.proceso__elemento-5__texto__item,
 .proceso__elemento-6__texto__item {
     line-height: 0.5;
     color: #307ba3;
@@ -497,7 +440,7 @@
         margin-top: 30px;
     }
 
-    .animado {
+    .animado_2 {
         width: 300px;
         height: 95px;
         border-radius: 20px;
@@ -506,7 +449,7 @@
         background-color: rgba(255, 255, 255, 0.56);
     }
 
-    .animado-2 {
+    .animado-2_2 {
         width: 300px;
         height: 193px;
         border-radius: 20px;
